testsuite/tests/lkt/base_type/generic_list/test.lkt
# Check that references to the implicit generic list type are correctly handled
# in base node types (i.e. rejected with a correct error message).

import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}

class FooNode implements Node[FooNode] {
}

class Example: FooNodeBaseList {
}
